# hash-file

./: .gitignore  Cargo.toml  README.md
src/: hasher.rs  main.rs  verifier.rs
tests/: integration_test.rs
