[package]
name = "hash-file"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Your Name"]
description = "Fast CLI tool to calculate and verify cryptographic hashes of files"

[[bin]]
name = "hash-file"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"
anyhow = "1.0"
walkdir = "2.4"
rayon = "1.8"
colored = "2.1"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.8"